Giraph Change Log

Release 0.2.0 - unreleased
  GIRAPH-406: Enforce partition ids in [0, n-1] (majakabiljo)

  GIRAPH-402: slf4j dependency bug (nitay via apresta)

  GIRAPH-401: Metrics should be disabled by default (apresta)

  GIRAPH-400: Refactoring broke
  TestTextDoubleDoubleAdjacencyListVertexInputFormat (apresta)

  GIRAPH-155: Allow creation of graph by adding edges that span
  multiple workers (apresta)

  GIRAPH-398: Missing a dependency (nitay via majakabiljo)

  GIRAPH-394: mapreduce.job.user.classpath.first hadoop option typo
  (nitay via aching)

  GIRAPH-232: Add metrics system into Giraph. (nitay via aching)

  GIRAPH-393: Number of input split threads should always be >= 1
  (aching)

  GIRAPH-388: Improve the way we keep outgoing messages (majakabiljo
  via aching).

  GIRAPH-389: Multithreading should intelligently allocate the thread
  pools. (aching via ereisman)

  GIRAPH-273: Aggregators shouldn't use Zookeeper (majakabiljo)

  GIRAPH-376: Facebook Hadoop profile broken. (nitay via aching)

  GIRAPH-387: GiraphRunner's better handling of configuration property
  arguments. (netj via aching)

  GIRAPH-385: Script for running on all profiles. (nitay via aching)

  GIRAPH-384: Remove duplicate BspCase in giraph-formats-contrib (and
  fix GIRAPH-382 breaking the build). (aching)

  GIRAPH-382: ZooKeeperExt should handle ConnectionLossException by
  retrying. (aching)

  GIRAPH-381: Ensure we get the original exception from
  GraphMapper#run(). (aching)

  GIRAPH-379: HiveGiraphRunner should have a skipOutput option for
  testing (aching)

  GIRAPH-380: Hadoop_non_secure is broken (majakabiljo)

  GIRAPH-372: Write worker addresses to Zookeeper; 
  move addresses and resolution to NettyClient (majakabiljo)

  GIRAPH-373: RandomMessageBenchmark is broken (majakabiljo).

  GIRAPH-374: Multithreading in input split loading and compute (aching).

  GIRAPH-375: Cleaner MutableVertex API (apresta)
